--- a/derdeperiode.html
+++ b/derdeperiode.html
@@ -48,8 +48,7 @@ with coding HTML/CSS, but also with the programmes Animate and After Effects. <b
 with After Effects before, I chose that one to make my animation in. I also wanted to increase my skills
 while working with After Effects. So my animation was about a little monster namend Franky. Throughout my
 animation you can feed him, put him to sleep and dance with him. Down below is a link to my prototype</p>
-<a class="bestandendrie" href="Styles/ANIMATIONDEF.PRD">My prototype</a>
-<img class="bt1" src="Styles/ib.png" alt="">
+<img id="yeah" class="bt1" src="Styles/ib.png" alt="">
 
      <h2>Project Design 2</h2>
      <p class="p2">Project 2 was a continuation of the first project. We had to make the first project
@@ -57,10 +56,8 @@ animation you can feed him, put him to sleep and dance with him. Down below is a
    Mine was about real and fake laughing so I filmed my sister while she was real laughing and fake laughing.
  That became my intro of the website. After that I made some short shots of her laughing so that I could explain
 the differences clearly. Down below is my prototype</p>
-<img class="bt1" src="Styles/prscherm.mov" alt="">
-<video class="btmov" controls="controls">
-  Your browser does not support the &lt;video&gt; tag.
-  <source class="bt1" src="Styles/prscherm.mov" />
-</video>
+<img id="yeah" class="bt1" src="Styles/krispr.png" alt="">
+
+
   </body>
 </html>
